--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Konexio</title>
     <meta name="description" content="16 semaines pour devenir développeur full-stack JavaScript web  web mobile.">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
       <h1>Hello git</h1>
